bitbag-derive/trybuild/fail/single_variant_with_zero.stderr
error[E0080]: evaluation of constant value failed
 --> trybuild/fail/single_variant_with_zero.rs:1:1
  |
1 | #[bitbag_derive::check]
  | ^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'BadFlags::Zero has no bits set', $DIR/trybuild/fail/single_variant_with_zero.rs:1:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
